responsive, mob-nav,

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Find the house you want easily">
+    <meta name="keywords" content="appartments, rent, holiday">
+    <meta name="author" content="Irakli Gafrindashvili">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="styles.css">
@@ -22,14 +25,17 @@
                 </ul>
             </div>
             <input type="button" value="Sell something" class="header-button">
+            <div class="search">
+                <img src="img/search.png" alt="search">
+            </div>
         </section>
     </header>
     <main>
-        <section class="location-search flex">
+        <section class="location-background flex">
             <div class="location flex">
                 <div class="territory flex">
                     <span class="title-16px">Location</span>
-                    <input type="button" value="All Kenya" class="Kenya">
+                    <input type="button" value="All Kenya" class="kenya">
                 </div>
                 <div class="property flex">
                     <span class="title-16px">Property</span>
@@ -98,13 +104,13 @@
                     </div>
                 </div>
             </div>
-            <div class="search">
-                <div class="search-img">
+            <div class="background">
+                <div class="background-img">
                     <img src="img/search-background.jpg" alt="city" class="city">
                 </div>
-                <div class="search-text flex">
+                <div class="background-text flex">
                     <h1>Find the house you want easily</h1>
-                    <span class="grey-text">Buy, sell, rent or lease on just one platform</span>
+                    <span class="grey-text res-size">Buy, sell, rent or lease on just one platform</span>
                     <input type="search" placeholder="search" class="search-tab">
                 </div>
             </div>
@@ -112,101 +118,101 @@
         <section class="trending-ads flex">
             <span class="title-18px">Trending ads</span>
             <div class="ads-box flex">
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/beach-house.jpg" alt="beach house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/beach-house.jpg" alt="beach house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/house-pool.jpg" alt="pool house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/house-pool.jpg" alt="pool house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/white-house.jpg" alt="white house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/white-house.jpg" alt="white house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/beach-house.jpg" alt="beach house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/beach-house.jpg" alt="beach house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
             </div>
             <div class="ads-box flex">
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/house-pool.jpg" alt="beach house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/house-pool.jpg" alt="beach house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/white-house.jpg" alt="pool house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/white-house.jpg" alt="pool house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/beach-house.jpg" alt="white house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/beach-house.jpg" alt="white house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
-                <div class="apartment-description">
-                    <a href="home.html"><img src="img/house-pool.jpg" alt="beach house" class="apartment-img"></a>
+                <div class="apartment-description flex">
+                    <a href="card-page.html"><img src="img/house-pool.jpg" alt="beach house" class="apartment-img"></a>
                     <input type="button" value="VIP TOP +" class="vip">
                     <img src="img/white-circle.png" alt="white circle" class="circle">
                     <img src="img/bookmark.png" alt="bookmark" class="bookmark">
                     <span class="apartment-title">200 Acres Parcel for Sale in Namanga</span>
                     <span class="grey-text">Kajiado, Namanga</span>
                     <p class="price-month"><span class="price-24px">1450$</span>/ Month</p>
-                    <div class="apartment-details">
+                    <div class="apartment-details flex">
                         <span>5 Bedroom</span>3 Bathroom<span></span><span>450 Sq.m</span>
                     </div>
                 </div>
@@ -221,7 +227,7 @@
                     <li><a href="index.html">Contact us</a></li>
                     <li><a href="index.html">Sign in</a></li>
                 </ul>
-                <span>Support@Roberts.com</span>
+                <span class="roberts">Support@Roberts.com</span>
                 <ul class="top-nav flex">
                     <li><a href="facebook.com">Facebook</a></li>
                     <li><a href="instagram.com">Instagram</a></li>
@@ -229,10 +235,13 @@
                     <li><a href="twitter.com">Twitter</a></li>
                 </ul>
             </div>
-            <div class="footer-bottom">
+            <div class="footer-bottom flex">
                 <span>Robert.co.ke Gibraltar</span>
             </div>
         </section>
     </footer>
+    <sectiom class="mobile">
+        <img src="img/mob-nav.png" alt="mob-nav" class="mob-nav">
+    </sectiom>
 </body>
 </html>
