mob-nav fixed, small resolution navigation fixed

--- a/card-page.html
+++ b/card-page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <section class="navigation flex">
+        <section class="nav-igation flex">
             <div class="logo">
                 <a href="index.html"><img src="img/logo.png" alt="logo" class="logo-size"></a>
             </div>
