--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <header>
-        <section class="navigation flex">
+        <section class="nav-igation flex">
             <div class="logo">
                 <a href="index.html"><img src="img/logo.png" alt="logo" class="logo-size"></a>
             </div>
             <div>
-                <ul class=" nav flex">
+                <ul class="nav flex">
                     <li><a href="">Home</a></li>
                     <li><a href="">Discover</a></li>
                     <li><a href="">Contact us</a></li>
